`[Symbol.hasInstance]` is not required